user: thêm chức năng lấy thẻ

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,3 +23,4 @@ div.cardinfo  .control-label {text-align: left !important;}
   background-color: rgba(211, 211, 211, 0.75);
   border-color: #e7e7e7;
 }
+.ico-add-card-info{width: 20px}
