add station fee

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,3 +24,5 @@ div.cardinfo  .control-label {text-align: left !important;}
   border-color: #e7e7e7;
 }
 .ico-add-card-info{width: 20px}
+.container-user{margin-top: 60px}
+.panel-content{margin-top: 20px}
